--- a/about.html
+++ b/about.html
@@ -99,13 +99,13 @@
                                 <a href="service.html" class="nav-item nav-link">Service</a>
                                 <a href="team.html" class="nav-item nav-link">Team</a>
                                 <a href="portfolio.html" class="nav-item nav-link">Project</a>
-                                <div class="nav-item dropdown">
+                                <!--div class="nav-item dropdown">
                                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                                     <div class="dropdown-menu">
                                         <a href="blog.html" class="dropdown-item">Blog Page</a>
                                         <a href="single.html" class="dropdown-item">Single Page</a>
                                     </div>
-                                </div>
+                                </div-->
                                 <a href="contact.html" class="nav-item nav-link">Contact</a>
                             </div>
                             <div class="ml-auto">
@@ -196,7 +196,7 @@
                                         <i class="flaticon-address"></i>
                                     </div>
                                     <div class="fact-text">
-                                        <h2 data-toggle="counter-up">127</h2>
+                                        <h2 data-toggle="counter-up">541</h2>
                                         <p>Completed Projects</p>
                                     </div>
                                 </div>
@@ -205,7 +205,7 @@
                                         <i class="flaticon-crane"></i>
                                     </div>
                                     <div class="fact-text">
-                                        <h2 data-toggle="counter-up">2</h2>
+                                        <h2 data-toggle="counter-up">11</h2>
                                         <p>Running Projects</p>
                                     </div>
                                 </div>
