--- a/portfolio.html
+++ b/portfolio.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Builderz - Construction Company Website Template</title>
+        <title>Tezeon Services limited | Pioneering Sustainable Water Solutions</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Construction Company Website Template" name="keywords">
-        <meta content="Construction Company Website Template" name="description">
+        <meta content="hydrogeological company, water company, drilling and exploration" name="keywords">
+        <meta content="water exploration company" name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
@@ -36,7 +36,7 @@
                         <div class="col-lg-4 col-md-12">
                             <div class="logo">
                                 <a href="index.html">
-                                    <h1>Builderz</h1>
+                                    <h1>Tezeon Services limited</h1>
                                     <!-- <img src="img/logo.jpg" alt="Logo"> -->
                                 </a>
                             </div>
@@ -61,7 +61,7 @@
                                         </div>
                                         <div class="top-bar-text">
                                             <h3>Call Us</h3>
-                                            <p>+012 345 6789</p>
+                                            <p>+234 803 096 7886</p>
                                         </div>
                                     </div>
                                 </div>
@@ -72,7 +72,7 @@
                                         </div>
                                         <div class="top-bar-text">
                                             <h3>Email Us</h3>
-                                            <p>info@example.com</p>
+                                            <p>info@tezeonservicesltd.com</p>
                                         </div>
                                     </div>
                                 </div>
@@ -81,7 +81,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Top Bar End -->
+            <!-- Top Bar End -->            
 
             <!-- Nav Bar Start -->
             <div class="nav-bar">
@@ -99,7 +99,7 @@
                                 <a href="service.html" class="nav-item nav-link">Service</a>
                                 <a href="team.html" class="nav-item nav-link">Team</a>
                                 <a href="portfolio.html" class="nav-item nav-link active">Project</a>
-                                <div class="nav-item dropdown">
+                                <!--div class="nav-item dropdown">
                                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                                     <div class="dropdown-menu">
                                         <a href="blog.html" class="dropdown-item">Blog Page</a>
@@ -107,9 +107,9 @@
                                     </div>
                                 </div>
                                 <a href="contact.html" class="nav-item nav-link">Contact</a>
-                            </div>
+                            </div-->
                             <div class="ml-auto">
-                                <a class="btn" href="https://htmlcodex.com/construction-company-html-template">Download Pro Version</a>
+                                <!--a class="btn" href="https://htmlcodex.com/construction-company-html-template">Download Pro Version</a-->
                             </div>
                         </div>
                     </nav>
@@ -156,103 +156,103 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.1s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-1.jpg" alt="Image">
+                                    <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703179904/home_setup_l92b3l.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            Home system.
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Project Name</h3>
-                                    <a class="btn" href="img/portfolio-1.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703179904/home_setup_l92b3l.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.2s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-2.jpg" alt="Image">
+                                    <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703179926/drilling_pvs4dm.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            Exploration
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Project Name</h3>
-                                    <a class="btn" href="img/portfolio-2.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703179926/drilling_pvs4dm.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.3s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-3.jpg" alt="Image">
+                                    <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703179957/plumbing_eiwbiz.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            Plumbing and piping.
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Project Name</h3>
-                                    <a class="btn" href="img/portfolio-3.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703179957/plumbing_eiwbiz.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.4s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-4.jpg" alt="Image">
+                                    <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703179993/tank_rqjgdq.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            Tanks.
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Project Name</h3>
-                                    <a class="btn" href="img/portfolio-4.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703179993/tank_rqjgdq.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-5.jpg" alt="Image">
+                                    <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703180023/water_installation_qiomfk.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            Industrial filtration system.
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Project Name</h3>
-                                    <a class="btn" href="img/portfolio-5.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703180023/water_installation_qiomfk.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <img src="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703179979/Stansion_vjhu83.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            Stanchion.
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Project Name</h3>
-                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="https://res.cloudinary.com/dxd3nmbag/image/upload/v1703179979/Stansion_vjhu83.jpg" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-12 load-more">
-                            <a class="btn" href="#">Load More</a>
+                            <a class="btn" href="#">More</a>
                         </div>
                     </div>
                 </div>
@@ -261,15 +261,15 @@
 
 
             <!-- Footer Start -->
-            <div class="footer wow fadeIn" data-wow-delay="0.3s">
+	                <div class="footer wow fadeIn" data-wow-delay="0.3s">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 col-lg-3">
                             <div class="footer-contact">
                                 <h2>Office Contact</h2>
-                                <p><i class="fa fa-map-marker-alt"></i>123 Street, New York, USA</p>
-                                <p><i class="fa fa-phone-alt"></i>+012 345 67890</p>
-                                <p><i class="fa fa-envelope"></i>info@example.com</p>
+                                <p><i class="fa fa-map-marker-alt"></i>30 Bayo Shodikpo Avenue, Palmwill Estate, Ajah, Lagos NG</p>
+                                <p><i class="fa fa-phone-alt"></i>+234 803 096 7886</p>
+                                <p><i class="fa fa-envelope"></i>info@tezeonservicesltd.com</p>
                                 <div class="footer-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -282,11 +282,11 @@
                         <div class="col-md-6 col-lg-3">
                             <div class="footer-link">
                                 <h2>Services Areas</h2>
-                                <a href="">Building Construction</a>
-                                <a href="">House Renovation</a>
-                                <a href="">Architecture Design</a>
-                                <a href="">Interior Design</a>
-                                <a href="">Painting</a>
+                                <a href="">Water exploration and borehole installation</a>
+                                <a href="">Treatment plant management</a>
+                                <a href="">Home & Estate piping/plumbing</a>
+                                <a href="">Sewage management</a>
+                                <a href="">Factory setup & swimming pool design </a>
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-3">
@@ -303,7 +303,7 @@
                             <div class="newsletter">
                                 <h2>Newsletter</h2>
                                 <p>
-                                    Lorem ipsum dolor sit amet elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulpu
+                                    Enter your email here for weekly update.
                                 </p>
                                 <div class="form">
                                     <input class="form-control" placeholder="Email here">
@@ -325,9 +325,9 @@
                 <div class="container copyright">
                     <div class="row">
                         <div class="col-md-6">
-                            <p>&copy; <a href="#">Your Site Name</a>, All Right Reserved.</p>
+                            <p>&copy; <a href="#">tezeonservicesltd.com</a>, All Right Reserved.</p>
                         </div>
-						
+
 						<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                         <div class="col-md-6">
                             <p>Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
